ci: 降低构建产物体积